WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275541
[Writing Tools] Weak link Writing Tools instead of soft linking
https://bugs.webkit.org/show_bug.cgi?id=275541
Summary
[Writing Tools] Weak link Writing Tools instead of soft linking
Richard Robinson
Reported
2024-06-15 21:01:56 PDT
rdar://129933357
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2024-06-15 21:08:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29869
EWS
Comment 2
2024-06-15 23:26:01 PDT
Committed
280059@main
(118689a19bbd): <
https://commits.webkit.org/280059@main
> Reviewed commits have been landed. Closing PR #29869 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug