[Writing Tools] Weak link Writing Tools instead of soft linking https://bugs.webkit.org/show_bug.cgi?id=275541 rdar://129933357

Reviewed by Megan Gardner.

* Source/WebCore/PAL/PAL.xcodeproj/project.pbxproj:
* Source/WebCore/PAL/pal/spi/cocoa/WritingToolsSPI.h: Added.
* Source/WebCore/PAL/pal/spi/cocoa/WritingToolsUISPI.h: Added.
* Source/WebKit/Configurations/WebKit.xcconfig:
* Source/WebKit/UIProcess/mac/WKTextIndicatorStyleManager.mm:
* Tools/TestWebKitAPI/Configurations/TestWebKitAPI.xcconfig:

Canonical link: https://commits.webkit.org/280059@main